# koffi

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  koffi.py  pyproject.toml  setup.py
.github/workflows/: build-documentation.yml  testing-and-coverage.yml
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst  requirements.txt
koffi_tools/: image_metadata.py  potential_source.py
src/koffi/: __init__.py  koffi.py  script.py
src/koffi_tools/: __init__.py  image_metadata.py  potential_source.py
tests/: koffi_test_helpers.py  test_image_metadata.py  test_koffi_search.py  test_potential_source.py
