[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "KOFFI"
description = "Known Objects From FITS Indices"
requires-python = ">=3.7"
dependencies = [
    "astropy",
    "astroquery",
    "dask",
    "tqdm"
]
license = {text = "BSD 3-Clause License"}
dynamic = ["version"]

# formatting configuration as specified at developer.lsst.io
[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110